# mandelbug

./: .gitignore  Cargo.toml  README.md  convert.py  equations.py  flags.txt  include_wasm.py  mandel.html  mandel_worker.js  optimize_target.m  strip-wasm.sh
src/: main.rs
web_wasm/: Cargo.toml
web_wasm/src/: lib.rs
