[package]
name = "mandelbug"
version = "0.1.0"
edition = "2021"
description = "A Mandelbrot utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
libc = "0.2.170"
num-traits = "0.2"
rug = "1.27.0"
